--- a/flaskbiob/templates/BASE.html
+++ b/flaskbiob/templates/BASE.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
     <title>Bad Ideas on Bikes</title>
+
+    {% block extrahead %}
+    {% endblock extrahead %}
+
 </head>
     <body>
     <div class="banner-top"><img src="{{ url_for('static', filename='BIOB_Dark_Square_SM.jpg') }}" class="mx-auto d-block img-fluid"></div>
