added about me pic and changed logo to png

--- a/flaskbiob/templates/BASE.html
+++ b/flaskbiob/templates/BASE.html
@@ -16,7 +16,7 @@
 
 </head>
     <body>
-    <div class="banner-top"><img src="{{ url_for('static', filename='BIOB_Dark_Square_SM.jpg') }}" class="mx-auto d-block img-fluid"></div>
+    <div class="banner-top"><img src="{{ url_for('static', filename='BIOB_Dark_Square.png') }}" class="mx-auto d-block img-fluid"></div>
     <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-custom mb-4">
         <div class="container">
               <a class="navbar-brand bebas" href="{{ url_for('main.homePage') }}">Bad Ideas On Bikes</a>
