fixed margin problem

--- a/flaskbiob/templates/About.html
+++ b/flaskbiob/templates/About.html
@@ -3,7 +3,7 @@
                 <div class="row mb-4">
                     <div class="col-md-12">
                         <h1>About Bad Ideas on Bikes</h1>
-                        <img src="{{ url_for('static', filename='about_me.jpg') }}" class="img-fluid" alt="me!">
+                        <img src="{{ url_for('static', filename='about_me.jpg') }}" class="img-fluid mb-4" alt="me!">
                         <p class="lead">My name is Joe and I’m mad about bikes...</p>
                         <p>I started this website in 2020 during the Covid-19 pandemic while making a push to change my career trajectory away from medical imaging and into software development (not an easy task in the middle of a global pandemic!). What started as a small project to learn some basics of web development quickly grew into what you see before you.</p>
                         <p>I have an obsession with mapping, route planning and exploring. I love to cycle in new places and I’m constantly on the lookout for the next adventure. I wanted to share some of the best routes I’ve ridden because I’m passionate about inspiring everyone to get out and ride. The UK is stuffed full of hidden gems and amazing roads.</p>
