--- a/flaskbiob/templates/Routes.html
+++ b/flaskbiob/templates/Routes.html
@@ -1,7 +1,9 @@
 {% extends "BASE.html" %}
 
 {% block extrahead %}
-<link rel="stylesheet" href="{{ url_for('static', filename='nouislider/distribute/nouislider.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='nouislider/distribute/nouislider.css') }}">
+    <title>Bad Ideas on Bikes: Routes</title>
+    <meta name="description" content="All the Bad Ideas on Bikes routes in one place. Road cycling routes across some of the UK's best roads.">
 {% endblock extrahead %}
 
 
