--- a/flaskbiob/templates/About.html
+++ b/flaskbiob/templates/About.html
@@ -1,4 +1,8 @@
 {% extends "BASE.html" %}
+{% block extrahead %}
+        <title>Bad Ideas on Bikes: About</title>
+        <meta name="description" content="About me, the author of Bad Ideas on Bikes. Bad Ideas on Bikes aims to bring you some of the best bike routes in the UK. From steep hills and epic views, to quiet backwaters, there's epic routes to be ridden across the country">
+{% endblock extrahead %}
 {% block content %}
                 <div class="row mb-4">
                     <div class="col-md-12">
