--- a/flaskbiob/templates/Home.html
+++ b/flaskbiob/templates/Home.html
@@ -1,4 +1,8 @@
 {% extends "BASE.html" %}
+    {% block extrahead %}
+        <title>Bad Ideas on Bikes</title>
+        <meta name="description" content="Bad Ideas on Bikes aims to bring you some of the best bike routes in the UK. From steep hills and epic views, to quiet backwaters, there's epic routes to be ridden across the country">
+    {% endblock extrahead %}
     {% block content %}
     <div class="row">
         <div class="col-lg-8" id="main">
