--- a/flaskbiob/templates/Home.html
+++ b/flaskbiob/templates/Home.html
@@ -33,15 +33,13 @@
             </div>
         </div>
         <div class="col-4 order-2 px-5 border-left d-none d-lg-block pb-3" id="sticky-sidebar">
-            <div class="sticky-top sticky-offset">
-                <h5>My name is Joe and I’m obsessed with riding bikes</h5>
-                <hr>
-                <p>Bad Ideas on Bikes is very poorly named. It should be called excellent ideas on bikes because riding bikes is excellent and riding bikes stupidly far and up stupidly high or steep hills is excellent… to me. To everyone else it sounds terrible.</p>
-                <p>I made this site to share my passion. I want to share some of my favorite rides and routes and maybe even impart knowledge? Maybe that’s taking it too far!</p>
-                <p>I hope you enjoy reading some of the content here and it gives you a good (or bad!) idea for your next two wheeled adventure.</p>
-                <p>I’d love to hear from you!</p>
-                <p>dummy@email.com</p>
-            </div>
+            <h5>My name is Joe and I’m obsessed with riding bikes</h5>
+            <hr>
+            <p>Bad Ideas on Bikes is very poorly named. It should be called excellent ideas on bikes because riding bikes is excellent and riding bikes stupidly far and up stupidly high or steep hills is excellent… to me. To everyone else it sounds terrible.</p>
+            <p>I made this site to share my passion. I want to share some of my favorite rides and routes and maybe even impart knowledge? Maybe that’s taking it too far!</p>
+            <p>I hope you enjoy reading some of the content here and it gives you a good (or bad!) idea for your next two wheeled adventure.</p>
+            <p>I’d love to hear from you!</p>
+            <a class="btn btn-dark" href="/contact">Contact Bad Ideas on Bikes</a>
         </div>
     </div>
 
