--- a/flaskbiob/templates/Reviews.html
+++ b/flaskbiob/templates/Reviews.html
@@ -77,7 +77,8 @@
         {% if not reviews.items %}
         <div class="col-md-8">
             <h2>No Reviews Yet!</h2>
-            <p>If You'd like to get in touch about a product please contact me here...</p>
+            <p>If You'd like to get in touch about a product please contact me</p>
+            <a href="/contact" class="btn btn-dark">Contact Bad Ideas on Bikes</a>
         </div>
         {% endif %}
         <div class="col-md-8">
